Erros
MasterServer.java:436: error: run() in ClientHandler cannot implement run() in Runnable
	public void run() throws InterruptedException{	
	            ^
  overridden method does not throw InterruptedException
MasterServer.java:573: error: incompatible types: void cannot be converted to ClientHandler
			ch = new ClientHandler(cs,database).start();		
			                                         ^
2 errors
